fix(v2): layout issues

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,5 @@
 .button {
+  display: flex;
   background: transparent;
   border: none;
   border-radius: 0.5rem;
