--- a/src/components/ControlBar/ControlBar.module.scss
+++ b/src/components/ControlBar/ControlBar.module.scss
@@ -16,4 +16,5 @@
   display: flex;
   gap: 2rem;
   align-items: center;
+  justify-self: center;
 }
